[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.4"
cargo-manifest = "0.17.0"
hashbrown = { version = "0.15.2", features = ["rayon"] }
itertools = "0.13.0"
leaky-bucket = "1.1.2"
serde = { version = "1.0.216", features = ["derive"] }
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.28.2"
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["full", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
